fix broken footer bar (scrollbar wouldn't go away)

--- a/web/viperweb/static/viperweb/css/style.css
+++ b/web/viperweb/static/viperweb/css/style.css
@@ -29,25 +29,15 @@
     padding-top: 20px;
 }
 
-/* Sticky footer styles
+/* Customize sticky footer
 -------------------------------------------------- */
-html {
-    position: relative;
-    min-height: 100%;
-}
-body {
-    /* Margin bottom by footer height */
-    margin-bottom: 60px;
-}
 .footer {
     padding-top: 5px;
-    position: absolute;
-    bottom: 0;
-    width: 100%;
     /* Set the fixed height of the footer here */
     height: 30px;
     background-color: #f5f5f5;
 }
+
 
 /* Misc
 -------------------------------------------------- */
